--- a/force-app/main/default/classes/RESTMedicalFacilitiesTests.cls
+++ b/force-app/main/default/classes/RESTMedicalFacilitiesTests.cls
@@ -25,16 +25,29 @@
 @isTest
 public without sharing class RESTMedicalFacilitiesTests {
 
-    @IsTest
-    private static void testGetMethod() {
-        Medical_Facility__c facility = new Medical_Facility__c(
+    @TestSetup
+    private static void setupTestData() {
+        Medical_Facility__c facility1 = new Medical_Facility__c(
             Name = 'Szpital dzieciecy', Phone_Number__c = '',
             Monday__c = '09:00-17:00', Tuesday__c = '09:30-18:00', Wednesday__c = '10:00-19:00', 
             Thursday__c = '08:00-16:30', Friday__c = '11:00-20:00', Saturday__c = '12:00-21:00', Sunday__c = '10:30-18:30',
             City__c = 'ExampleCity', Street__c = 'Main Street', Building_number__c = '123', zip_code__c = '12-345'
         );
+        insert facility1;
 
-        insert facility;
+        Medical_Facility__c facility2 = new Medical_Facility__c(
+            Name = 'Izba pomocy', Phone_Number__c = '',
+            Monday__c = '09:32-13:30', Tuesday__c = '06:30-18:00', Wednesday__c = '16:00-19:00', 
+            Thursday__c = '06:00-16:30', Friday__c = '15:00-20:00', Saturday__c = '12:00-21:00', Sunday__c = '10:30-18:30',
+            City__c = 'asdf', Street__c = 'erqw Street', Building_number__c = '321', zip_code__c = '23-385'
+        );
+        insert facility2;
+    }
+
+    @IsTest
+    private static void testGetMethod() {
+
+        List<Medical_Facility__c> ids = [SELECT Id from Medical_Facility__c];
 
         RestRequest request = new RestRequest();
         request.requestURI = 'services/apexrest/Medical_Facility__c';
@@ -48,7 +61,7 @@ public without sharing class RESTMedicalFacilitiesTests {
         RESTMedicalFacilities.getMedicalFacilities();
         test.stopTest();
 
-        String responseBody = '[{"phoneNumber":null,"openingHours":{"Monday":"09:00-17:00","Tuesday":"09:30-18:00","Wednesday":"10:00-19:00","Thursday":"08:00-16:30","Friday":"11:00-20:00","Saturday":"12:00-21:00","Sunday":"10:30-18:30"},"name":"Szpital dzieciecy","id":"' + facility.id + '","address":["ExampleCity","Main Street","123","12-345"]}]';
+        String responseBody = '[{"phoneNumber":null,"openingHours":{"Monday":"09:00-17:00","Tuesday":"09:30-18:00","Wednesday":"10:00-19:00","Thursday":"08:00-16:30","Friday":"11:00-20:00","Saturday":"12:00-21:00","Sunday":"10:30-18:30"},"name":"Szpital dzieciecy","id":"' + String.valueOf(ids[0].Id) + '","address":["ExampleCity","Main Street","123","12-345"]},{"phoneNumber":null,"openingHours":{"Monday":"09:32-13:30","Tuesday":"06:30-18:00","Wednesday":"16:00-19:00","Thursday":"06:00-16:30","Friday":"15:00-20:00","Saturday":"12:00-21:00","Sunday":"10:30-18:30"},"name":"Izba pomocy","id":"' + String.valueOf(ids[1].Id) + '","address":["asdf","erqw Street","321","23-385"]}]';
 
         Assert.areEqual(200,response.statusCode);
         Assert.areEqual(responseBody, response.responseBody.toString());
@@ -56,20 +69,13 @@ public without sharing class RESTMedicalFacilitiesTests {
 
     @isTest
     private static void testPutMethod() {
-        Medical_Facility__c facility = new Medical_Facility__c(
-            Name = 'Izba pomocy', Phone_Number__c = '',
-            Monday__c = '09:32-13:30', Tuesday__c = '06:30-18:00', Wednesday__c = '16:00-19:00', 
-            Thursday__c = '06:00-16:30', Friday__c = '15:00-20:00', Saturday__c = '12:00-21:00', Sunday__c = '10:30-18:30',
-            City__c = 'asdf', Street__c = 'erqw Street', Building_number__c = '321', zip_code__c = '23-385'
-        );
-
-        insert facility;
+        List<Medical_Facility__c> ids = [SELECT Id from Medical_Facility__c];
 
         RestRequest request = new RestRequest();
         request.requestURI = 'services/apexrest/Medical_Facility__c';
         RestResponse response = new RestResponse();
 
-        request.requestBody = Blob.valueOf('[{"id":"' + facility.id + '","openingHours":{"Monday":"09:00-17:00","Tuesday":"09:30-18:00","Wednesday":"10:00-19:00","Thursday":"08:00-16:30","Friday":"11:00-20:00","Saturday":"12:00-21:00","Sunday":"10:30-18:30"},"name":"Bytom"}]');
+        request.requestBody = Blob.valueOf('[{"id":"' + String.valueOf(ids[0].Id) + '","openingHours":{"Monday":"09:00-17:00","Tuesday":"09:30-18:00","Wednesday":"10:00-19:00","Thursday":"08:00-16:30","Friday":"11:00-20:00","Saturday":"12:00-21:00","Sunday":"10:30-18:30"},"name":"Bytom"}]');
 
         RestContext.request = request;
         RestContext.response = response;
@@ -78,7 +84,7 @@ public without sharing class RESTMedicalFacilitiesTests {
         List<Id> output = RESTMedicalFacilities.putMedicalFacilities();
         test.stopTest();
 
-        Assert.areEqual(output[0],facility.id);
+        Assert.areEqual(output[0],String.valueOf(ids[0].Id));
     }
 
     @isTest
@@ -103,38 +109,19 @@ public without sharing class RESTMedicalFacilitiesTests {
 
     @isTest
     private static void listPutMethod() {
-        List<Medical_Facility__c> facilities = new List<Medical_Facility__c>();
-        
-        facilities.add(
-            new Medical_Facility__c(
-                Name = 'Szpital wojewodzki', Phone_Number__c = '789456123',
-                Monday__c = '09:32-13:30', Tuesday__c = '06:30-18:00', Wednesday__c = '16:00-19:00', 
-                Thursday__c = '06:00-15:30', Friday__c = '15:00-20:00', Saturday__c = '12:00-21:00', Sunday__c = '10:30-18:30',
-                City__c = 'ABC', Street__c = 'abc', Building_number__c = '1', zip_code__c = '11-111'
-            )
-        );
 
-        facilities.add(
-            new Medical_Facility__c(
-                Name = 'Izba pomocy', Phone_Number__c = '',
-                Monday__c = '09:32-13:30', Tuesday__c = '06:30-18:00', Wednesday__c = '16:00-19:00', 
-                Thursday__c = '06:00-16:30', Friday__c = '15:00-20:00', Saturday__c = '12:00-21:00', Sunday__c = '10:30-18:30',
-                City__c = 'asdf', Street__c = 'erqw Street', Building_number__c = '321', zip_code__c = '23-385'
-            )
-        );
+        List<Medical_Facility__c> ids = [SELECT Id from Medical_Facility__c];
 
-        insert facilities;
+        List<Id> idsList = new List<Id>();
 
-        List<Id> ids = new List<Id>();
-
-        ids.add(facilities[0].id);
-        ids.add(facilities[1].id);
+        idsList.add(ids[0].Id);
+        idsList.add(ids[1].Id);
 
         RestRequest request = new RestRequest();
         request.requestURI = 'services/apexrest/Medical_Facility__c';
         RestResponse response = new RestResponse();
 
-        request.requestBody = Blob.valueOf('[{"openingHours":{"Monday":"00:00-17:00","Tuesday":"00:30-18:00","Wednesday":"10:00-19:00","Thursday":"00:00-16:30","Friday":"00:00-20:00","Saturday":"00:00-21:00","Sunday":"00:30-18:30"},"name":"Szpital dzieciecy","id":"' + ids[0] + '"},{"openingHours":{"Monday":"00:30-16:30","Tuesday":"00:30-16:30","Wednesday":"00:30-16:30","Thursday":"00:30-16:30","Friday":"00:30-16:30","Saturday":"00:30-16:30","Sunday":"00:30-16:30"},"name":"Szpital Lodz","id":"' + ids[1] + '"}]');
+        request.requestBody = Blob.valueOf('[{"openingHours":{"Monday":"00:00-17:00","Tuesday":"00:30-18:00","Wednesday":"10:00-19:00","Thursday":"00:00-16:30","Friday":"00:00-20:00","Saturday":"00:00-21:00","Sunday":"00:30-18:30"},"name":"Szpital dzieciecy","id":"' + String.valueOf(ids[0].Id) + '"},{"openingHours":{"Monday":"00:30-16:30","Tuesday":"00:30-16:30","Wednesday":"00:30-16:30","Thursday":"00:30-16:30","Friday":"00:30-16:30","Saturday":"00:30-16:30","Sunday":"00:30-16:30"},"name":"Szpital Lodz","id":"' + String.valueOf(ids[1].Id) + '"}]');
 
 
         RestContext.request = request;
@@ -144,7 +131,45 @@ public without sharing class RESTMedicalFacilitiesTests {
         List<Id> output = RESTMedicalFacilities.putMedicalFacilities();
         test.stopTest();
 
-        Assert.areEqual(output, ids);
+        Assert.areEqual(output, idsList);
+    }
+
+    @isTest
+    private static void testPostMethod() {
+        RestRequest request = new RestRequest();
+        request.requestURI = 'services/apexrest/Medical_Facility__c';
+        RestResponse response = new RestResponse();
+
+        request.requestBody = Blob.valueOf('{"fromDateTime":"2023-12-07 10:00:00","toDateTime":"2023-12-07 17:00:00"}');
+
+        RestContext.request = request;
+        RestContext.response = response;
+
+
+        test.startTest();
+        RESTMedicalFacilities.postMedicalFacilities();
+        test.stopTest();
+
+        Assert.areEqual(response.responseBody.toString(), '["Szpital dzieciecy","Izba pomocy"]');
+    }
+
+    @isTest
+    private static void testPostMethodOneFacility() {
+        RestRequest request = new RestRequest();
+        request.requestURI = 'services/apexrest/Medical_Facility__c';
+        RestResponse response = new RestResponse();
+
+        request.requestBody = Blob.valueOf('{"fromDateTime":"2023-12-06 10:00:00","toDateTime":"2023-12-06 13:00:00"}');
+
+        RestContext.request = request;
+        RestContext.response = response;
+
+
+        test.startTest();
+        RESTMedicalFacilities.postMedicalFacilities();
+        test.stopTest();
+
+        Assert.areEqual(response.responseBody.toString(), '["Szpital dzieciecy"]');
     }
 
 }
